[package]
name = "tflgtfs"
version = "0.1.0"
authors = ["Tom Burdick <thomas.burdick@gmail.com>"]

[dependencies]
ansi_term = "0.7"
clap = "2.3"
csv = "0.14"
env_logger = "0.3"
hyper = "^0.10"
hyper-native-tls = "^0.3.0"
log = "0.3"
rand = "0.3"
rust-crypto = "^0.2"
scoped_threadpool = "0.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
